force-app/main/default/objects/ARF_Communication__c/ARF_Communication__c.object-meta.xml
<CustomObject>
    <description>All customer interactions - emails, SMS, calls, notes</description>
    <label>AR Communication</label>
    <nameField>
        <displayFormat>ARF-{0000}</displayFormat>
        <label>AR Communication Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>