force-app/main/default/objects/ARF_Communication__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account this communication belongs to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AR_Communications</relationshipLabel>
    <relationshipName>AR_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>