force-app/main/default/objects/ARF_Communication__c/fields/AI_Drafted__c.field-meta.xml
<CustomField>
    <fullName>AI_Drafted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this was drafted by AI</description>
    <label>AI Drafted</label>
    <type>Checkbox</type>
</CustomField>