force-app/main/default/objects/ARF_Communication__c/fields/BCC_Addresses__c.field-meta.xml
<CustomField>
    <fullName>BCC_Addresses__c</fullName>
    <description>BCC email addresses (semicolon-separated)</description>
    <label>BCC Addresses</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>