force-app/main/default/objects/ARF_Communication__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Full communication content</description>
    <label>Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>