force-app/main/default/objects/ARF_Communication__c/fields/Call_Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_Seconds__c</fullName>
    <description>Duration of phone call in seconds</description>
    <label>Call Duration (seconds)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>