force-app/main/default/objects/ARF_Communication__c/fields/CC_Addresses__c.field-meta.xml
<CustomField>
    <fullName>CC_Addresses__c</fullName>
    <description>CC email addresses (semicolon-separated)</description>
    <label>CC Addresses</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>