force-app/main/default/objects/ARF_Communication__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Communication channel</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
                <value><fullName>SMS</fullName><default>false</default><label>SMS</label></value>
                <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
                <value><fullName>Note</fullName><default>false</default><label>Note</label></value>
                <value><fullName>Letter</fullName><default>false</default><label>Letter</label></value>
                <value><fullName>Chat</fullName><default>false</default><label>Chat</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>