force-app/main/default/objects/ARF_Communication__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact communicated with</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AR_Communications</relationshipLabel>
    <relationshipName>AR_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>