force-app/main/default/objects/ARF_Communication__c/fields/Detected_Language__c.field-meta.xml
<CustomField>
    <fullName>Detected_Language__c</fullName>
    <description>ISO 639-1 language code detected by AI classifier</description>
    <label>Detected Language</label>
    <length>10</length>
    <type>Text</type>
</CustomField>