force-app/main/default/objects/ARF_Communication__c/fields/Detected_Language_Name__c.field-meta.xml
<CustomField>
    <fullName>Detected_Language_Name__c</fullName>
    <description>Human-readable language name from AI classifier</description>
    <label>Detected Language Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>