force-app/main/default/objects/ARF_Communication__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>Inbound or outbound</description>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Outbound</fullName><default>false</default><label>Outbound</label></value>
                <value><fullName>Inbound</fullName><default>false</default><label>Inbound</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>