force-app/main/default/objects/ARF_Communication__c/fields/Has_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Has_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this communication has file attachments</description>
    <label>Has Attachment</label>
    <type>Checkbox</type>
</CustomField>