force-app/main/default/objects/ARF_Communication__c/fields/HTML_Body__c.field-meta.xml
<CustomField>
    <fullName>HTML_Body__c</fullName>
    <description>Rich HTML email body content</description>
    <label>HTML Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>