force-app/main/default/objects/ARF_Communication__c/fields/Invoice_Count__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of invoices referenced in this communication</description>
    <label>Invoice Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>