force-app/main/default/objects/ARF_Communication__c/fields/Match_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Match_Confidence__c</fullName>
    <description>Confidence score for the email-to-account match (0-100%)</description>
    <label>Match Confidence</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>