force-app/main/default/objects/ARF_Communication__c/fields/Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flagged for manual review when match confidence is below auto-link threshold</description>
    <label>Needs Review</label>
    <type>Checkbox</type>
</CustomField>