force-app/main/default/objects/ARF_Communication__c/fields/Related_Dispute__c.field-meta.xml
<CustomField>
    <fullName>Related_Dispute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related dispute if applicable</description>
    <label>Related Dispute</label>
    <referenceTo>ARF_Dispute__c</referenceTo>
    <relationshipLabel>Communications</relationshipLabel>
    <relationshipName>Communications</relationshipName>
    <type>Lookup</type>
</CustomField>