force-app/main/default/objects/ARF_Communication__c/fields/Related_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Related_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary invoice referenced</description>
    <label>Related Invoice</label>
    <referenceTo>ARF_Invoice__c</referenceTo>
    <relationshipLabel>Communications</relationshipLabel>
    <relationshipName>Communications</relationshipName>
    <type>Lookup</type>
</CustomField>