force-app/main/default/objects/ARF_Communication__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <description>When the communication was sent</description>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>