force-app/main/default/objects/ARF_Communication__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Communication status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Draft</fullName><default>false</default><label>Draft</label></value>
                <value><fullName>Sent</fullName><default>false</default><label>Sent</label></value>
                <value><fullName>Delivered</fullName><default>false</default><label>Delivered</label></value>
                <value><fullName>Opened</fullName><default>false</default><label>Opened</label></value>
                <value><fullName>Replied</fullName><default>false</default><label>Replied</label></value>
                <value><fullName>Bounced</fullName><default>false</default><label>Bounced</label></value>
                <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
                <value><fullName>Received</fullName><default>false</default><label>Received</label></value>
                <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
                <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
                <value><fullName>Escalated</fullName><default>false</default><label>Escalated</label></value>
                <value><fullName>Initiated</fullName><default>false</default><label>Initiated</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>