force-app/main/default/objects/ARF_Communication__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Email subject or communication topic</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>