force-app/main/default/objects/ARF_Communication__c/fields/Template_Used__c.field-meta.xml
<CustomField>
    <fullName>Template_Used__c</fullName>
    <description>Name of email template used</description>
    <label>Template Used</label>
    <length>100</length>
    <type>Text</type>
</CustomField>