force-app/main/default/objects/ARF_Communication__c/fields/Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>Thread_ID__c</fullName>
    <description>Email thread identifier for conversation threading</description>
    <label>Thread ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>