force-app/main/default/objects/ARF_Communication__c/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <description>Recipient email address</description>
    <label>To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>