force-app/main/default/objects/ARF_Communication__c/fields/Translated_Body__c.field-meta.xml
<CustomField>
    <fullName>Translated_Body__c</fullName>
    <description>English translation of Body__c, cached from on-demand API call</description>
    <label>Translated Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>