force-app/main/default/objects/ARF_Communication__c/fields/Translated_Subject__c.field-meta.xml
<CustomField>
    <fullName>Translated_Subject__c</fullName>
    <description>English translation of Subject__c</description>
    <label>Translated Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>